--- a/test_jinja_template.ipynb
+++ b/test_jinja_template.ipynb
@@ -3,6 +3,61 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "312ed823",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d:\\Git\\website_reservation\\.venv\\Scripts;D:\\Git\\site\\.venv\\Scripts;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\NVIDIA Corporation\\PhysX\\Common;C:\\Users\\virgi\\AppData\\Local\\Programs\\Python\\Python311;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Git\\cmd;C:\\ProgramData\\chocolatey\\bin;C:\\WINDOWS\\system32\\config\\systemprofile\\AppData\\Local\\Muse Hub\\lib;C:\\Program Files\\NVIDIA Corporation\\NVIDIA App\\NvDLISR;D:\\Programs\\WeasyPrint\\weasyprint-windows;C:\\Users\\virgi\\AppData\\Local\\Programs\\Python\\Python311\\Scripts\\;C:\\Users\\virgi\\AppData\\Local\\Programs\\Python\\Python311\\;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files\\NVIDIA Corporation\\NVIDIA NvDLISR;C:\\Program Files (x86)\\NVIDIA Corporation\\PhysX\\Common;C:\\Users\\virgi\\AppData\\Local\\Programs\\Python\\Python311;C:\\Users\\virgi\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\virgi\\AppData\\Local\\Programs\\Python\\Python311\\Scripts;C:\\Users\\virgi\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\virgi\\AppData\\Roaming\\Python\\Python311\\Scripts;C:\\Users\\virgi\\Downloads\\Release-24.07.0-0\\poppler-24.07.0\\Library\\bin;C:\\Users\\virgi\\AppData\\Roaming\\Python\\Python311\\site-packages\\torch\\bin;C:\\Users\\virgi\\AppData\\Local\\gitkraken\\bin;C:\\Users\\virgi\\AppData\\Local\\Muse Hub\\lib;C:\\Users\\virgi\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\virgi\\AppData\\Local\\Pandoc\\;D:\\Programs\\WeasyPrint\\weasyprint-windows;\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(os.environ[\"PATH\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3d4fe6c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "weasyprint.urls\n",
+      "66.0\n",
+      "<function HTML.write_pdf at 0x000001A5CF9B56C0>\n",
+      "['Attachment', 'CSS', 'DEFAULT_OPTIONS', 'Document', 'HTML', 'HTML5_PH_STYLESHEET', 'HTML5_UA_COUNTER_STYLE', 'HTML5_UA_FORM_STYLESHEET', 'HTML5_UA_STYLESHEET', 'LOGGER', 'PROGRESS_LOGGER', 'Page', 'Path', 'VERSION', '__all__', '__builtins__', '__cached__', '__doc__', '__file__', '__loader__', '__name__', '__package__', '__path__', '__spec__', '__version__', '_find_base_url', '_select_source', 'anchors', 'contextlib', 'css', 'cssselect2', 'datetime', 'default_url_fetcher', 'document', 'draw', 'ensure_url', 'fetch', 'formatting_structure', 'getctime', 'getmtime', 'html', 'images', 'layout', 'logger', 'matrix', 'path2url', 'pdf', 'preprocess_stylesheet', 'stacking', 'svg', 'text', 'tinycss2', 'tinyhtml5', 'url_is_absolute', 'urljoin', 'urls']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import weasyprint\n",
+    "from weasyprint import HTML\n",
+    "print(weasyprint.default_url_fetcher.__module__)\n",
+    "print(weasyprint.__version__)\n",
+    "print(HTML.write_pdf)\n",
+    "print(dir(weasyprint))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40470f19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import weasyprint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "d0313ce8",
    "metadata": {},
    "outputs": [],
@@ -12,7 +67,7 @@
     "from dotenv import load_dotenv\n",
     "load_dotenv(dotenv_path = '.venv/.env')\n",
     "from jinja2 import Environment, FileSystemLoader\n",
-    "# from weasyprint import HTML, CSS"
+    "from weasyprint import HTML, CSS"
    ]
   },
   {
