--- a/test_mail.ipynb
+++ b/test_mail.ipynb
@@ -11,7 +11,47 @@
     "from datetime import datetime\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv(dotenv_path = '.venv/.env')\n",
-    "from reservations.utils import send"
+    "from reservations.utils import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3249c6a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2025, 12, 1, 17, 36, 41, 330193)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e212a0bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'BEGIN:VCALENDAR\\nVERSION:2.0\\nPRODID:-//SiteReservation//EN\\nMETHOD:PUBLISH\\nBEGIN:VEVENT\\nUID:ff11c466-7802-44f1-b1fb-1209911ddd47\\nDTSTAMP:20251201T173707\\nDTSTART:20251201T173707\\nDTEND:20251201T183707\\nSUMMARY:reservations\\nEND:VEVENT\\nEND:VCALENDAR\\n'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "creer_ics(datetime.now(), datetime.now()+timedelta(hours=1), \"reservations\")"
    ]
   },
   {
