End of migration on prod account, failed payment ok, ingoing link for partial & full refund

--- a/test_gcalendar.ipynb
+++ b/test_gcalendar.ipynb
@@ -1,190 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "f565b375",
-   "metadata": {},
-   "source": [
-    "Voici **la procédure complète, propre et technique** pour utiliser **un Service Account** avec Google Calendar (la méthode PRO : stable, sans OAuth, sans test users, sans refresh tokens).\n",
-    "\n",
-    "Je te propose un workflow en **3 étapes** :\n",
-    "1️⃣ Créer le service account\n",
-    "2️⃣ L’autoriser sur ton agenda Google\n",
-    "3️⃣ L’utiliser dans ton code pour lire/écrire des événements\n",
-    "\n",
-    "---\n",
-    "\n",
-    "# ✅ 1. Création du Service Account (Google Cloud)\n",
-    "\n",
-    "1. Va sur :\n",
-    "   [https://console.cloud.google.com/iam-admin/serviceaccounts](https://console.cloud.google.com/iam-admin/serviceaccounts)\n",
-    "2. Sélectionne ton projet\n",
-    "3. Clique **Create Service Account**\n",
-    "\n",
-    "**Remplir :**\n",
-    "\n",
-    "* Service account name : `calendar-bot` (par ex.)\n",
-    "* ID généré automatiquement\n",
-    "\n",
-    "👉 Clique **Create and Continue**\n",
-    "\n",
-    "4. Ne donne *aucun rôle* (Google Calendar ne se gère pas via IAM mais via partage d’agenda).\n",
-    "   👉 Clique **Done**\n",
-    "\n",
-    "5. Dans la liste, clique sur ton service account nouvellement créé.\n",
-    "\n",
-    "6. Onglet **Keys** → **Add Key** → **Create new key**\n",
-    "\n",
-    "* Type : **JSON**\n",
-    "* Enregistre le fichier → c’est **ton fichier de credentials** (ex. `service.json`)\n",
-    "\n",
-    "⚠️ Ne le partage jamais.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "# ✅ 2. Autoriser ce service account à accéder à TON agenda\n",
-    "\n",
-    "Ton service account possède une adresse type :\n",
-    "\n",
-    "```\n",
-    "calendar-bot@ton-projet.iam.gserviceaccount.com\n",
-    "```\n",
-    "\n",
-    "➡️ Ce n’est pas un “vrai” compte Google, mais on peut **partager un agenda** avec lui.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### 📌 Sur Google Calendar :\n",
-    "\n",
-    "1. Ouvre Google Calendar\n",
-    "2. Dans la colonne de gauche → **Mes agendas**\n",
-    "3. Clique sur les trois points → **Paramètres et partage**\n",
-    "4. Descends jusqu’à : **Partager avec des personnes spécifiques**\n",
-    "5. Ajoute :\n",
-    "\n",
-    "```\n",
-    "calendar-bot@ton-projet.iam.gserviceaccount.com\n",
-    "```\n",
-    "\n",
-    "6. Donne lui les droits :\n",
-    "\n",
-    "```\n",
-    "Apporter des modifications et gérer le partage\n",
-    "```\n",
-    "\n",
-    "🎯 Sans ce partage → ton service account n’a AUCUN accès → 403 garanti.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "# ✅ 3. Utiliser le service account dans ton code\n",
-    "\n",
-    "Ton code devient extrêmement simple :\n",
-    "\n",
-    "```python\n",
-    "from google.oauth2 import service_account\n",
-    "from googleapiclient.discovery import build\n",
-    "\n",
-    "SCOPES = [\"https://www.googleapis.com/auth/calendar\"]\n",
-    "SERVICE_ACCOUNT_FILE = \"service.json\"  # le fichier téléchargé\n",
-    "\n",
-    "# Création du credential\n",
-    "creds = service_account.Credentials.from_service_account_file(\n",
-    "    SERVICE_ACCOUNT_FILE,\n",
-    "    scopes=SCOPES,\n",
-    ")\n",
-    "\n",
-    "# Construire le client Calendar\n",
-    "service = build(\"calendar\", \"v3\", credentials=creds)\n",
-    "\n",
-    "# ID de l'agenda — \"primary\" fonctionne si tu as partagé TON agenda perso\n",
-    "calendar_id = \"primary\"\n",
-    "\n",
-    "# Test : récupérer les 10 prochains événements\n",
-    "events_result = service.events().list(\n",
-    "    calendarId=calendar_id,\n",
-    "    maxResults=10,\n",
-    "    singleEvents=True,\n",
-    "    orderBy=\"startTime\",\n",
-    ").execute()\n",
-    "\n",
-    "events = events_result.get(\"items\", [])\n",
-    "\n",
-    "for event in events:\n",
-    "    print(event[\"summary\"], event[\"start\"])\n",
-    "```\n",
-    "\n",
-    "🎉 Aucune page OAuth\n",
-    "🎉 Aucun token.json\n",
-    "🎉 Aucun refresh\n",
-    "🎉 Aucune validation Google nécessaire\n",
-    "🎉 Ultrastable pour backend (Django, script, cron, etc.)\n",
-    "\n",
-    "---\n",
-    "\n",
-    "# 🔍 4. Vérifier qu’un créneau est disponible\n",
-    "\n",
-    "Exemple : vérifier si un créneau `[start, end]` est libre :\n",
-    "\n",
-    "```python\n",
-    "import datetime\n",
-    "\n",
-    "start = datetime.datetime(2025, 1, 1, 14, 0).isoformat() + \"Z\"\n",
-    "end   = datetime.datetime(2025, 1, 1, 15, 0).isoformat() + \"Z\"\n",
-    "\n",
-    "events = service.events().list(\n",
-    "    calendarId=\"primary\",\n",
-    "    timeMin=start,\n",
-    "    timeMax=end,\n",
-    "    singleEvents=True,\n",
-    "    orderBy=\"startTime\",\n",
-    ").execute().get(\"items\", [])\n",
-    "\n",
-    "if len(events) == 0:\n",
-    "    print(\"Créneau dispo !\")\n",
-    "else:\n",
-    "    print(\"Créneau occupé :\", events)\n",
-    "```\n",
-    "\n",
-    "---\n",
-    "\n",
-    "# 🧱 5. Ajouter un événement (ex : RDV client)\n",
-    "\n",
-    "```python\n",
-    "event = {\n",
-    "    \"summary\": \"Rendez-vous client\",\n",
-    "    \"start\": {\"dateTime\": start, \"timeZone\": \"Europe/Paris\"},\n",
-    "    \"end\":   {\"dateTime\": end,   \"timeZone\": \"Europe/Paris\"},\n",
-    "}\n",
-    "\n",
-    "event_created = service.events().insert(\n",
-    "    calendarId=\"primary\",\n",
-    "    body=event\n",
-    ").execute()\n",
-    "\n",
-    "print(\"Event created:\", event_created.get(\"htmlLink\"))\n",
-    "```\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "45cb2474",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import django\n",
+    "\n",
+    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"site_reservation.settings\")\n",
+    "django.setup()\n",
     "from reservations.utils import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "060c6585",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ID de l'agenda\n",
-    "calendar_id_resa = \"0047459c732e33256d4e298bd3d24e20c3d1f80fce13ef7c8eb5f3d91ed8b31f@group.calendar.google.com\"\n",
-    "calendar_id_perso = \"virgil.mesle@gmail.com\""
    ]
   },
   {
@@ -197,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "049d726a",
    "metadata": {},
    "outputs": [],
@@ -210,50 +38,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "351abe68",
+   "execution_count": 3,
+   "id": "1652bdf0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(datetime.datetime(2025, 11, 17, 0, 0, tzinfo=<DstTzInfo 'Europe/Paris' CET+1:00:00 STD>),\n",
-       " datetime.datetime(2025, 11, 23, 23, 59, 59, tzinfo=<DstTzInfo 'Europe/Paris' CET+1:00:00 STD>),\n",
-       " '2025-11-17T00:00:00+01:00',\n",
-       " '2025-11-23T23:59:59+01:00')"
+       "<googleapiclient.discovery.Resource at 0x20de47f5990>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_week_date_range()"
+    "get_service()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "fa18f211",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['20/11/2025 - 10:00 à 18:00',\n",
-       " '21/11/2025 - 10:00 à 18:00',\n",
-       " '22/11/2025 - 10:00 à 18:00',\n",
-       " '23/11/2025 - 10:00 à 18:00']"
+       "['08/12/2025 - 06:00 à 23:00',\n",
+       " '09/12/2025 - 06:00 à 23:00',\n",
+       " '10/12/2025 - 06:00 à 23:00',\n",
+       " '11/12/2025 - 06:00 à 23:00',\n",
+       " '12/12/2025 - 06:00 à 23:00',\n",
+       " '13/12/2025 - 06:00 à 23:00',\n",
+       " '14/12/2025 - 06:00 à 23:00']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_events_current_week(calendar_id_resa)"
+    "get_events_current_week(calendar_id = os.getenv(\"id_agenda_creaneaux\"))"
    ]
   }
  ],
