--- a/test_gmap.ipynb
+++ b/test_gmap.ipynb
@@ -11,7 +11,7 @@
     "from datetime import datetime\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
-    "load_dotenv(dotenv_path = '.venv/.env')\n",
+    "load_dotenv(dotenv_path = '.venv/.env_prod')\n",
     "api_key = os.getenv(\"google_api_key\") "
    ]
   },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "da728e4d",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
        "\"[{'address_components': [{'long_name': 'Google Building 41', 'short_na\""
       ]
      },
-     "execution_count": 21,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "cda4cb32",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
        "\"[{'address_components': [{'long_name': '281', 'short_name': '281', 'ty\""
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "40c7820e",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "ddb194fc",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
        "dict_keys(['bounds', 'copyrights', 'legs', 'overview_polyline', 'summary', 'warnings', 'waypoint_order'])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,17 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "07ea13ef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1471"
+       "1814"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,17 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "id": "0ab58c18",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'text': '25.2 km', 'value': 25168}"
+       "{'text': '25.4 km', 'value': 25437}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
