--- a/test_mail.ipynb
+++ b/test_mail.ipynb
@@ -2,50 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "4ca2ccfc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import django\n",
     "import os\n",
     "from datetime import datetime\n",
     "from dotenv import load_dotenv\n",
-    "load_dotenv(dotenv_path = '.venv/.env')\n",
+    "load_dotenv(dotenv_path = '.venv/.env_prod')\n",
+    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"site_reservation.settings\")\n",
+    "django.setup()\n",
     "from reservations.utils import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3249c6a8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2025, 12, 1, 17, 36, 41, 330193)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e212a0bc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'BEGIN:VCALENDAR\\nVERSION:2.0\\nPRODID:-//SiteReservation//EN\\nMETHOD:PUBLISH\\nBEGIN:VEVENT\\nUID:ff11c466-7802-44f1-b1fb-1209911ddd47\\nDTSTAMP:20251201T173707\\nDTSTART:20251201T173707\\nDTEND:20251201T183707\\nSUMMARY:reservations\\nEND:VEVENT\\nEND:VCALENDAR\\n'"
+       "'BEGIN:VCALENDAR\\nVERSION:2.0\\nPRODID:-//SiteReservation//EN\\nMETHOD:PUBLISH\\nBEGIN:VEVENT\\nUID:230faeb5-6969-4382-a34c-0fb591b5f810\\nDTSTAMP:20251211T160928\\nDTSTART:20251211T160928\\nDTEND:20251211T170928\\nSUMMARY:reservations\\nEND:VEVENT\\nEND:VCALENDAR\\n'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "f2ce5f9a",
    "metadata": {},
    "outputs": [
@@ -73,7 +57,7 @@
     }
    ],
    "source": [
-    "send([os.getenv(\"email_destination\")], \"[TEST MAIL] Test de l'envoi d'email\", f\"Ceci est un test envoyé à {datetime.now()}\")"
+    "send([\"virgil.mesle@gmail.com\"], \"[TEST MAIL] Test de l'envoi d'email\", f\"Ceci est un test envoyé à {datetime.now()}\")"
    ]
   }
  ],
