--- a/test_sumup.ipynb
+++ b/test_sumup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "20139073",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,23 +25,48 @@
     "\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "load_dotenv(dotenv_path = '.venv/.env')"
+    "load_dotenv(dotenv_path = '.venv/.env_prod')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
+   "id": "11050bbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import django\n",
+    "from asgiref.sync import sync_to_async\n",
+    "\n",
+    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"site_reservation.settings\")\n",
+    "django.setup()\n",
+    "from reservations.utils import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "7fa6ea15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BASE_URL = \"https://api.sumup.com\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2e691425",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sumpup_api_key = os.getenv(\"sumup_api_key\")\n",
+    "sumpup_api_key = os.getenv(\"sumpup_api_key\")\n",
     "client = Sumup(api_key=sumpup_api_key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "id": "c29c9e14",
    "metadata": {},
    "outputs": [
@@ -49,82 +74,135 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\virgi\\AppData\\Local\\Temp\\ipykernel_11928\\4117817524.py:2: DeprecationWarning: The _Retrieve a profile_ endpoint is deprecated, please use the `Merchant` object instead (see [Merchants](https://developer.sumup.com/api/merchants)).\n",
-      "  merchant = client.merchant.get()\n"
+      "C:\\Users\\virgi\\AppData\\Local\\Temp\\ipykernel_5416\\881049463.py:1: DeprecationWarning: The _Retrieve a profile_ endpoint is deprecated, please use the `Merchant` object instead (see [Merchants](https://developer.sumup.com/api/merchants)).\n",
+      "  merchant = client.merchant.get().merchant_profile.merchant_code\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Merchant: MNR0YQWH\n"
+      "Merchant: MCL3GUEQ vs MCL3GUEQ\n"
      ]
     }
    ],
    "source": [
-    "# Get merchant profile\n",
-    "merchant = client.merchant.get()\n",
-    "merchant_code = merchant.merchant_profile.merchant_code\n",
-    "print(f\"Merchant: {merchant_code}\")"
+    "merchant = client.merchant.get().merchant_profile.merchant_code\n",
+    "print(f\"Merchant: {merchant} vs {os.getenv('merchant_code_official')}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "3cb4919c",
+   "execution_count": null,
+   "id": "c9cded20",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Checkout ID: 8210653a-0cec-4819-90a8-49a0d02033ce\n",
-      "Checkout Reference: e6085fea-6b99-4409-aae2-cfcee984548b\n"
+      "\n",
+      "        🟠 Fonction - CREATE CHECKOUT\n",
+      "        Checkout ID: 0bfc16b3-1e21-4756-a065-d2e3864d25eb\n",
+      "        Checkout Reference: 6cc83c23\n",
+      "          \n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Checkout(amount=1.0, checkout_reference='6cc83c23', currency='EUR', customer_id=None, date=datetime.datetime(2025, 12, 11, 20, 55, 17, 135000, tzinfo=TzInfo(0)), description='description', id='0bfc16b3-1e21-4756-a065-d2e3864d25eb', mandate=None, merchant_code='MCL3GUEQ', return_url='http://127.0.0.1:8000/webhook/', status='PENDING', transactions=[], valid_until=None)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create a checkout\n",
-    "checkout = client.checkouts.create(\n",
-    "    body=CreateCheckoutBody(\n",
-    "        amount=1.00,\n",
-    "        currency=\"EUR\",\n",
-    "        checkout_reference=str(uuid.uuid4()),\n",
-    "        merchant_code=merchant_code,\n",
-    "        description=\"Test payment\",\n",
-    "        redirect_url=\"https://example.com/success\",\n",
-    "        return_url=\"https://example.com/webhook\"\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "print(f\"Checkout ID: {checkout.id}\")\n",
-    "print(f\"Checkout Reference: {checkout.checkout_reference}\")"
+    "checkout = create_checkout(sumpup_api_key, os.getenv('merchant_code_official'),1, \"\" )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "id": "3d90ff55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "checkout_id = \"d1a0f7d8-e969-4f34-9067-2d7b4c5b8526\" #d1a0f7d8-e969-4f34-9067-2d7b4c5b8526"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "id": "8f94500d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "CheckoutSuccess(amount=1.0, checkout_reference='e6085fea-6b99-4409-aae2-cfcee984548b', currency='EUR', customer_id=None, date=datetime.datetime(2025, 11, 17, 18, 34, 54, 205000, tzinfo=TzInfo(0)), description='Test payment', id='8210653a-0cec-4819-90a8-49a0d02033ce', mandate=None, merchant_code='MNR0YQWH', merchant_name='Test Account', payment_instrument=None, redirect_url='https://example.com/success', return_url='https://example.com/webhook', status='PENDING', transaction_code=None, transaction_id=None, transactions=[], valid_until=None)"
+       "CheckoutSuccess(amount=2.2, checkout_reference='fceb1a73', currency='EUR', customer_id=None, date=datetime.datetime(2025, 12, 11, 20, 59, 23, 54000, tzinfo=TzInfo(0)), description='description', id='d1a0f7d8-e969-4f34-9067-2d7b4c5b8526', mandate=None, merchant_code='MCL3GUEQ', merchant_name='MESLÉ VTC', payment_instrument=None, redirect_url='http://127.0.0.1:8000/paiement/resultat/', return_url='http://127.0.0.1:8000/webhook/', status='PAID', transaction_code='TAAAYVVXPC7', transaction_id='a69ae715-b9f1-42fb-81d6-37a8f7f2f762', transactions=[CheckoutSuccessTransaction(amount=2.2, auth_code='153806', currency='EUR', entry_mode='CUSTOMER_ENTRY', id='a69ae715-b9f1-42fb-81d6-37a8f7f2f762', installments_count=1, internal_id=9959083090, merchant_code='MCL3GUEQ', payment_type='ECOM', status='SUCCESSFUL', timestamp=datetime.datetime(2025, 12, 11, 21, 3, 13, 42000, tzinfo=TzInfo(0)), tip_amount=None, transaction_code='TAAAYVVXPC7', vat_amount=None)], valid_until=None)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "client.checkouts.get(checkout.id)"
+    "client.checkouts.get(checkout_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "b09be7ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\" PAIEMENT EFFECTUE ET VALIDE\n",
+    "CheckoutSuccess(\n",
+    "amount=2.2,\n",
+    "checkout_reference='fceb1a73',\n",
+    "currency='EUR',\n",
+    "customer_id=None,\n",
+    "date=datetime.datetime(2025, 12, 11, 20, 59, 23, 54000, tzinfo=TzInfo(0)),\n",
+    "description='description',\n",
+    "id='d1a0f7d8-e969-4f34-9067-2d7b4c5b8526',\n",
+    "mandate=None,\n",
+    "merchant_code='MCL3GUEQ',\n",
+    "merchant_name='MESLÉ VTC',\n",
+    "payment_instrument=None,\n",
+    "redirect_url='http://127.0.0.1:8000/paiement/resultat/',\n",
+    "return_url='http://127.0.0.1:8000/webhook/',\n",
+    "status='PAID',\n",
+    "transaction_code='TAAAYVVXPC7',\n",
+    "transaction_id='a69ae715-b9f1-42fb-81d6-37a8f7f2f762',\n",
+    "transactions=[\n",
+    "    CheckoutSuccessTransaction(\n",
+    "    amount=2.2,\n",
+    "    auth_code='153806', \n",
+    "    currency='EUR', \n",
+    "    entry_mode='CUSTOMER_ENTRY', \n",
+    "    id='a69ae715-b9f1-42fb-81d6-37a8f7f2f762', \n",
+    "    installments_count=1, \n",
+    "    internal_id=9959083090, \n",
+    "    merchant_code='MCL3GUEQ', \n",
+    "    payment_type='ECOM', \n",
+    "    status='SUCCESSFUL', \n",
+    "    timestamp=datetime.datetime(2025, 12, 11, 21, 3, 13, 42000, tzinfo=TzInfo(0)), \n",
+    "    tip_amount=None, \n",
+    "    transaction_code='TAAAYVVXPC7', \n",
+    "    vat_amount=None)\n",
+    "    ],\n",
+    "    valid_until=None)\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "12fc7600",
    "metadata": {},
    "outputs": [
@@ -134,7 +212,7 @@
        "[]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,54 +244,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "5bba4b08",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pro = ProcessCheckoutBody(payment_type=\"card\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "3984f61b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "CheckoutSuccess(amount=1.0, checkout_reference='e6085fea-6b99-4409-aae2-cfcee984548b', currency='EUR', customer_id=None, date=datetime.datetime(2025, 11, 17, 18, 34, 54, 236000, tzinfo=TzInfo(0)), description='Test payment', id='8210653a-0cec-4819-90a8-49a0d02033ce', mandate=None, merchant_code='MNR0YQWH', merchant_name='Test Account', payment_instrument=None, redirect_url='https://example.com/success', return_url='https://example.com/webhook', status='FAILED', transaction_code=None, transaction_id=None, transactions=[CheckoutSuccessTransaction(amount=1.0, auth_code=None, currency='EUR', entry_mode='CUSTOMER_ENTRY', id='93233d2c-08f0-4bff-9935-080159094dff', installments_count=0, internal_id=9784622655, merchant_code='MNR0YQWH', payment_type='ECOM', status='FAILED', timestamp=datetime.datetime(2025, 11, 17, 18, 34, 54, 978000, tzinfo=TzInfo(0)), tip_amount=None, transaction_code='TAAAYKR4CBD', vat_amount=None)], valid_until=None)"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "client.checkouts.process(id=checkout.id, body=pro)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "83ec0db9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sumup.checkouts.resource.CheckoutsResource at 0x25b8b339f90>"
+       "<sumup.checkouts.resource.CheckoutsResource at 0x164bdbfbad0>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "client.checkouts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "397c4928",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def get_transaction_id(checkout_id: str, sumpup_api_key: str) -> str | None:\n",
+    "    \"\"\"\n",
+    "    Récupère un checkout SumUp via son id_checkout\n",
+    "    et renvoie le transaction_id associé.\n",
+    "    \"\"\"\n",
+    "    client = Sumup(api_key=sumpup_api_key)\n",
+    "    # Récupération du checkout\n",
+    "    checkout = client.checkout.get(checkout_id)\n",
+    "\n",
+    "    # Même logique que ci-dessus\n",
+    "    if checkout.transaction_id:\n",
+    "        return checkout.transaction_id\n",
+    "\n",
+    "    if checkout.transactions:\n",
+    "        return checkout.transactions[0].id\n",
+    "\n",
+    "    return None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "62874264",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def refund_partial(transaction_id: str, original_amount: float, ratio: float = 0.8):\n",
+    "    \"\"\"Remboursement partiel (80% par défaut).\"\"\"\n",
+    "    refund_amount = round(original_amount * ratio, 2)\n",
+    "\n",
+    "    url = f\"{BASE_URL}/v0.1/me/refund/{transaction_id}\"\n",
+    "    headers = {\n",
+    "        \"Authorization\": f\"Bearer {sumpup_api_key}\",\n",
+    "        \"Content-Type\": \"application/json\"\n",
+    "    }\n",
+    "\n",
+    "    response = requests.post(url, headers=headers, json={\"amount\": refund_amount})\n",
+    "\n",
+    "    print(\"\\n=== REMBOURSEMENT PARTIEL ===\")\n",
+    "    print(f\"Montant remboursé : {refund_amount} EUR\")\n",
+    "    print(f\"HTTP {response.status_code}\")\n",
+    "\n",
+    "    if response.status_code == 204:\n",
+    "        print(\"✔ Remboursement 80% OK\")\n",
+    "    else:\n",
+    "        print(response.text)\n",
+    "\n",
+    "    return response\n",
+    "\n",
+    "\n",
+    "def refund_full(transaction_id: str):\n",
+    "    \"\"\"Remboursement total.\"\"\"\n",
+    "    url = f\"{BASE_URL}/v0.1/me/refund/{transaction_id}\"\n",
+    "    headers = {\"Authorization\": f\"Bearer {sumpup_api_key}\"}\n",
+    "\n",
+    "    response = requests.post(url, headers=headers)\n",
+    "\n",
+    "    print(\"\\n=== REMBOURSEMENT TOTAL ===\")\n",
+    "    print(f\"HTTP {response.status_code}\")\n",
+    "\n",
+    "    if response.status_code == 204:\n",
+    "        print(\"✔ Remboursement total OK\")\n",
+    "    else:\n",
+    "        print(response.text)\n",
+    "\n",
+    "    return response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35dff83b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3) Remboursement à 80%\n",
+    "refund_partial(transaction_id, price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "b52a7d76",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== REMBOURSEMENT TOTAL ===\n",
+      "HTTP 204\n",
+      "✔ Remboursement total OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Response [204]>"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4) Remboursement total\n",
+    "refund_full(\"a69ae715-b9f1-42fb-81d6-37a8f7f2f762\")"
    ]
   }
  ],
