--- a/test_request.ipynb
+++ b/test_request.ipynb
@@ -27,13 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "ba91fef6",
    "metadata": {},
    "outputs": [],
    "source": [
     "googlemaps_api_key = os.getenv(\"google_api_key\")\n",
-    "sumpup_api_key = os.getenv(\"sumup_api_key\")\n",
+    "sumup_api_key = os.getenv(\"sumup_api_key\")\n",
     "merchant_code_test = os.getenv(\"merchant_code_test\")"
    ]
   },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "1414005f",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
     }
    ],
    "source": [
-    "id_paiement = create_checkout(sumpup_api_key,merchant_code_test, 1, \"trajet\")\n",
+    "id_paiement = create_checkout(sumup_api_key,merchant_code_test, 1, \"trajet\")\n",
     "id_paiement"
    ]
   },
