--- a/test_sumup_fuck.ipynb
+++ b/test_sumup_fuck.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "20139073",
    "metadata": {},
    "outputs": [
@@ -12,17 +12,12 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sumup import Sumup\n",
-    "from sumup.checkouts import CreateCheckoutBody, ProcessCheckoutBody\n",
-    "import uuid\n",
-    "\n",
-    "\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv(dotenv_path = '.venv/.env_prod')"
@@ -30,7 +25,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
+   "id": "a88b05ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sumup import Sumup\n",
+    "from sumup.checkouts import CreateCheckoutBody, ProcessCheckoutBody\n",
+    "import uuid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "56afc58b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sup_sk_6lhjzXUWCcXk9zJqabc4xtTRXBnT5y5tn'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getenv(\"sumup_api_key\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "11050bbe",
    "metadata": {},
    "outputs": [],
@@ -45,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "id": "7fa6ea15",
    "metadata": {},
    "outputs": [],
@@ -55,34 +83,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2e691425",
+   "execution_count": 6,
+   "id": "7dfc1da7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'mesle-entreprises.fr'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sumpup_api_key = os.getenv(\"sumpup_api_key\")\n",
-    "client = Sumup(api_key=sumpup_api_key)"
+    "os.getenv(\"site_domain\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
+   "id": "2e691425",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sumup_api_key = os.getenv(\"sumup_api_key\")\n",
+    "client = Sumup(api_key=sumup_api_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "c29c9e14",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\virgi\\AppData\\Local\\Temp\\ipykernel_5416\\881049463.py:1: DeprecationWarning: The _Retrieve a profile_ endpoint is deprecated, please use the `Merchant` object instead (see [Merchants](https://developer.sumup.com/api/merchants)).\n",
-      "  merchant = client.merchant.get().merchant_profile.merchant_code\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Merchant: MCL3GUEQ vs MCL3GUEQ\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_16305/881049463.py:1: DeprecationWarning: The _Retrieve a profile_ endpoint is deprecated, please use the `Merchant` object instead (see [Merchants](https://developer.sumup.com/api/merchants)).\n",
+      "  merchant = client.merchant.get().merchant_profile.merchant_code\n"
      ]
     }
    ],
@@ -93,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c9cded20",
    "metadata": {},
    "outputs": [
@@ -103,24 +152,48 @@
      "text": [
       "\n",
       "        🟠 Fonction - CREATE CHECKOUT\n",
-      "        Checkout ID: 0bfc16b3-1e21-4756-a065-d2e3864d25eb\n",
-      "        Checkout Reference: 6cc83c23\n",
+      "        Checkout ID: 21818f72-0999-4ff6-8fb6-595a91a8f079\n",
+      "        Checkout Reference: ODDUYF\n",
       "          \n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Checkout(amount=1.0, checkout_reference='6cc83c23', currency='EUR', customer_id=None, date=datetime.datetime(2025, 12, 11, 20, 55, 17, 135000, tzinfo=TzInfo(0)), description='description', id='0bfc16b3-1e21-4756-a065-d2e3864d25eb', mandate=None, merchant_code='MCL3GUEQ', return_url='http://127.0.0.1:8000/webhook/', status='PENDING', transactions=[], valid_until=None)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "checkout = create_checkout(sumpup_api_key, os.getenv('merchant_code_official'),1, \"\" )"
+    "checkout = create_checkout(sumup_api_key, os.getenv('merchant_code_official'),1.0, \"\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "80e41de3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b94b5b8a-39f6-464e-bfcc-78a490239572\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "from sumup import Sumup\n",
+    "from sumup.checkouts.resource import CreateCheckoutBody\n",
+    "\n",
+    "checkout = client.checkouts.create(\n",
+    "    CreateCheckoutBody(\n",
+    "        merchant_code=os.environ[\"merchant_code_official\"],\n",
+    "        amount=25.00,\n",
+    "        checkout_reference=\"ORDER-1002\",\n",
+    "        currency=\"EUR\",\n",
+    "        description=\"Online payment via card widget\",\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "print(checkout.id)\n",
+    "# Return checkout.id to your webpage so the SumUp card widget can complete the payment."
    ]
   },
   {
@@ -271,12 +344,12 @@
    "outputs": [],
    "source": [
     "\n",
-    "def get_transaction_id(checkout_id: str, sumpup_api_key: str) -> str | None:\n",
+    "def get_transaction_id(checkout_id: str, sumup_api_key: str) -> str | None:\n",
     "    \"\"\"\n",
     "    Récupère un checkout SumUp via son id_checkout\n",
     "    et renvoie le transaction_id associé.\n",
     "    \"\"\"\n",
-    "    client = Sumup(api_key=sumpup_api_key)\n",
+    "    client = Sumup(api_key=sumup_api_key)\n",
     "    # Récupération du checkout\n",
     "    checkout = client.checkout.get(checkout_id)\n",
     "\n",
@@ -292,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "62874264",
    "metadata": {},
    "outputs": [],
@@ -303,7 +376,7 @@
     "\n",
     "    url = f\"{BASE_URL}/v0.1/me/refund/{transaction_id}\"\n",
     "    headers = {\n",
-    "        \"Authorization\": f\"Bearer {sumpup_api_key}\",\n",
+    "        \"Authorization\": f\"Bearer {sumup_api_key}\",\n",
     "        \"Content-Type\": \"application/json\"\n",
     "    }\n",
     "\n",
@@ -324,7 +397,7 @@
     "def refund_full(transaction_id: str):\n",
     "    \"\"\"Remboursement total.\"\"\"\n",
     "    url = f\"{BASE_URL}/v0.1/me/refund/{transaction_id}\"\n",
-    "    headers = {\"Authorization\": f\"Bearer {sumpup_api_key}\"}\n",
+    "    headers = {\"Authorization\": f\"Bearer {sumup_api_key}\"}\n",
     "\n",
     "    response = requests.post(url, headers=headers)\n",
     "\n",
@@ -399,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
