tests webhook site

--- a/test_request.ipynb
+++ b/test_request.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "id": "37a3f66e",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,6 +23,65 @@
     "from datetime import datetime\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv(dotenv_path = '.venv/.env')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8ed6d3cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import django\n",
+    "os.environ.setdefault(\"DJANGO_SETTINGS_MODULE\", \"site_reservation.settings\")\n",
+    "django.setup()\n",
+    "from reservations.utils import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "69dd1af6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://mesle-entreprises.fr/Webhook-zRRjhnl549/'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "site_domain = os.getenv(\"site_domain\")\n",
+    "url = f\"https://{site_domain}/Webhook-zRRjhnl549/\"\n",
+    "url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2e9084ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unknown checkout_id\n"
+     ]
+    }
+   ],
+   "source": [
+    "payload = {\n",
+    "    \"id\": \"Bonjour\",\n",
+    "    \"status\": \"nope\" #\"FAILED\"\n",
+    "}\n",
+    "response = requests.post(url, json=payload)\n",
+    "print(response.text)"
    ]
   },
   {
@@ -147,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
